--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,6 @@ warn_unreachable = true
 [[tool.mypy.overrides]]
 module = [ "numpy.*", ]
 ignore_missing_imports = true
+
+[tool.isort]
+profile = "black"
