--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,12 +7,8 @@ on:
 
 jobs:
   tests:
-    strategy:
-      matrix:
-        runs-on: 
-        - ubuntu-latest
-        - windows-latest
-        - macos-latest
+    runs-on: ubuntu-latest
+    python-version: "3.10"
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
