--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,17 @@
+[build-system]
+requires = ["hatchling>=1.11.0"]
+build-backend = "hatchling.build"
+
+[project]
+name = "apc524-final-project"
+requires-python = "=3.10"
+
+[project.optional-dependencies]
+test = [
+  "pytest",
+  "uncertainties"
+]
+
 [tool.pytest.ini_options]
 minversion = "6.0"
 addopts = ["-ra", "--strict-markers", "--strict-config"]
