--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "apc524-final-project"
-requires-python = "=3.10"
+requires-python = "3.10"
 
 [project.optional-dependencies]
 test = [
