--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,13 @@ test = [
   "matplotlib",
   "scikit-learn"
 ]
+docs = [
+    "furo",  # Theme
+    "myst_parser >=0.13",  # Markdown
+    "sphinx >=4.0",
+    "sphinx_copybutton",  # Easy code copy button
+]
+
 
 [tool.pytest.ini_options]
 minversion = "6.0"
