--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         run: python -m pip install .[test]
 
       - name: run tests
-        run: pipx run nox
+        run: pipx run nox -s tests
 
   lint:
     name: precommit
