--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/configure-pages@v2
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v2
 
       - name: build output
         run: pipx run nox -s docs
