--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,6 @@
-matplotlib==3.5.3
+matplotlib>=3.5.3
 nox==2022.8.7
 numpy>=1.21.6
-pandas==1.4.4
-pytest==7.1.3
-scikit_learn==1.1.3
+pandas>=1.3.4
+pytest>=7.1.3
+scikit_learn>=1.0.3
